--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Task Manager</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
         /* NYU Perstare Font */
         @font-face {
             font-family: 'NYU Perstare';
-            src: url('../Drawers/NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Regular.otf') format('opentype');
+            src: url('./NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Regular.otf') format('opentype');
             font-weight: 400;
             font-style: normal;
         }
         @font-face {
             font-family: 'NYU Perstare';
-            src: url('../Drawers/NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Medium.otf') format('opentype');
+            src: url('./NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Medium.otf') format('opentype');
             font-weight: 500;
             font-style: normal;
         }
         @font-face {
             font-family: 'NYU Perstare';
-            src: url('../Drawers/NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Bold.otf') format('opentype');
+            src: url('./NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Bold.otf') format('opentype');
             font-weight: 700;
             font-style: normal;
         }
         @font-face {
             font-family: 'NYU Perstare';
-            src: url('../Drawers/NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Black.otf') format('opentype');
+            src: url('./NYUPerstare-Desktop-20250918/OpenTypeFonts/NYUPerstare-Black.otf') format('opentype');
             font-weight: 900;
             font-style: normal;
         }
@@ -100,7 +101,7 @@
         }
 
         html, body {
-            font-family: 'NYU Perstare', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-family: 'NYU Perstare', 'Playfair Display', serif;
             color: var(--text-primary);
             background-color: var(--background-color);
             width: 100%;
@@ -664,24 +665,6 @@
         .list-dropdown-item-check {
             color: var(--primary-color);
             font-size: 14px;
-        }
-
-        .list-share-btn {
-            background: transparent;
-            border: none;
-            color: var(--text-secondary);
-            padding: 4px 8px;
-            cursor: pointer;
-            font-size: 0.75rem;
-            transition: all var(--transition-fast);
-            font-weight: 500;
-            margin-left: var(--space-sm);
-        }
-
-        .list-share-btn:hover {
-            color: var(--primary-color);
-            background: var(--background-color);
-            border-radius: var(--radius-sm);
         }
 
         /* Tasks Counter Bar */
@@ -2760,17 +2743,6 @@
                 const nameSpan = document.createElement('span');
                 nameSpan.textContent = list.name;
                 item.appendChild(nameSpan);
-
-                // Create share button
-                const shareBtn = document.createElement('button');
-                shareBtn.className = 'list-share-btn';
-                shareBtn.textContent = '[share]';
-                shareBtn.title = 'Share list';
-                shareBtn.onclick = (e) => {
-                    e.stopPropagation();
-                    showShareModal(list.id);
-                };
-                item.appendChild(shareBtn);
 
                 if (list.id === pomodoroState.currentListId) {
                     const checkIcon = document.createElement('i');
