--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Task Manager</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
         /* NYU Perstare Font */
         @font-face {
@@ -101,7 +101,7 @@
         }
 
         html, body {
-            font-family: 'NYU Perstare', 'Playfair Display', serif;
+            font-family: 'NYU Perstare', 'Montserrat', sans-serif;
             color: var(--text-primary);
             background-color: var(--background-color);
             width: 100%;
@@ -559,7 +559,7 @@
         }
 
         .list-title {
-            font-family: 'Playfair Display', serif;
+            font-family: 'NYU Perstare', 'Montserrat', sans-serif;
             font-size: 1.75rem;
             font-weight: 600;
             color: var(--primary-color);
@@ -1480,7 +1480,7 @@
             font-size: var(--font-size-xl);
             font-weight: 600;
             color: var(--primary-color);
-            font-family: 'Playfair Display', serif;
+            font-family: 'NYU Perstare', 'Montserrat', sans-serif;
         }
 
         .settings-close {
