Update bug report link and Pomodoro app URL

--- a/index.html
+++ b/index.html
@@ -3901,7 +3901,7 @@
         }
 
         function reportBug() {
-            window.open('https://github.com/anthropics/claude-code/issues', '_blank');
+            window.open('https://docs.google.com/forms/d/e/1FAIpQLScdkrinM5XB9jtV1I48v7CbrRZwPmaQP96Q_a9vJFlLG6gQUQ/viewform?usp=publish-editor', '_blank');
             document.getElementById('optionsDropdownMenu').classList.remove('show');
         }
 
@@ -3942,7 +3942,7 @@
                 `   → Select ALL the text between the lines marked "START COPYING HERE" and "STOP COPYING HERE"\n` +
                 `   → Copy it (Cmd+C or Ctrl+C)\n\n` +
                 `STEP 2: Open the Pomodoro Task Manager\n` +
-                `   → Visit: [Your Pomodoro app URL]\n\n` +
+                `   → Visit: https://landfair.github.io/PomodoroStandalone/ \n\n` +
                 `STEP 3: Upload the list\n` +
                 `   → Click the Options button (∨) in the top-right corner\n` +
                 `   → Select "Upload List"\n` +
